--- a/src/main/resources/panl.properties.template
+++ b/src/main/resources/panl.properties.template
@@ -71,7 +71,7 @@ $solrj.client
 #
 #           The below property would then become:
 #
-#             solr.search.server.url=zookeeper:http://localhost:9983
+#             solr.search.server.url=zookeeper:localhost:9983
 #
 #                                ~ ~ ~ * ~ ~ ~
 
