--- a/src/main/resources/panl_collection_url.panl.properties.template
+++ b/src/main/resources/panl_collection_url.panl.properties.template
@@ -393,6 +393,10 @@ solr.facet.min.count=1
 # number of results to be returned by the lookahead handler.  It CANNOT be
 # changed through a LPSE URL parameter.
 #
+# For the 'More Like This' document results (solr.numrows.morelikethis) this is
+# the number of results to be returned by the MoreLikeThis handler.  It CANNOT
+# be changed through a LPSE URL parameter.
+#
 # The maximum number of results that will ever be allowed to be returned by the
 # Panl server (solr.numrows.maximum).  If a LPSE code is passed through which
 # is greater than this, then it will be set to this.  This stops arbitrary LPSE
@@ -404,6 +408,7 @@ solr.facet.min.count=1
 solr.numrows.default=10
 solr.numrows.lookahead=5
 solr.numrows.maximum=10
+solr.numrows.morelikethis=5
 
 #           Whether To Return Search Results With Highlight Markup
 #           ------- -- ------ ------ ------- ---- --------- ------
