--- a/src/main/resources/panl_collection_url.panl.properties.template
+++ b/src/main/resources/panl_collection_url.panl.properties.template
@@ -220,13 +220,50 @@ panl.collection.extra=
 
 #                      'More Like This' (MLT) Functionality
 #                      ----- ---- ----- ----- -------------
-# The following properties will enable the MLT functionality in the Panl server
-# and works in conjunction with the solrconfig.xml file which requires
-# additional configuration - e.g.
+# There are two ways to do an MLT query:
 #
-#  <requestHandler name="/mlt" class="solr.MoreLikeThisHandler">
-#    <str name="mlt.fl">body</str>
-#  </requestHandler>
+#   1. MoreLikeThis Query Parser
+#      This uses the existing /select query handler, which is already
+#      configured in the solrconfig.xml file, or
+#   2. MoreLikeThis Request Handler
+#      This will require a solr.MoreLikeThisHandler - to be registered in the
+#      solrconfig.xml file.
+#
+#                            MoreLikeThis Query Parser
+#                            ============ ===== ======
+#    Use this query parser if you Solr is setup in cloud mode __AND__ there are
+#    more than one replica (the number of shards do not matter).
+#
+#    Set the properties:
+#        panl.mlt.enable=true
+#        panl.mlt.handler=/select
+#        panl.mlt.type=select
+#
+#                          MoreLikeThis Request Handler
+#                          ============ ======= =======
+#    Use this query parser if you Solr is not setup in cloud mode and you wish
+#    to have a separate handler for the MLT.  Note that this handler is not
+#    cloud aware will only return nodes from the first replica.  Due to this
+#    Panl will attempt to retry the query against other nodes if no valid
+#    response was received.  This may still fail...
+#
+#    Set the properties:
+#        panl.mlt.enable=true
+#        panl.mlt.handler=/mlt
+#        panl.mlt.type=mlt
+#
+#   You will also need to add configuration to the solrconfig.xml file for this
+#   to work:
+#
+#     <requestHandler name="/mlt" class="solr.MoreLikeThisHandler">
+#       <str name="mlt.fl">body</str>
+#     </requestHandler>
+#
+#                            ~ ~ ~ IMPORTANT ~ ~ ~
+#
+#          If in doubt use the MoreLikeThis Query Parser (i.e. /select)
+#
+#                                ~ ~ ~ * ~ ~ ~
 #
 # By default this functionality is DISABLED with the panl.mlt.enable property
 # set to false if missing or not set to exactly "true".
@@ -236,11 +273,14 @@ panl.collection.extra=
 #    panl.mlt.enable - Whether the MLT functionality is enabled in Panl for
 #        this CaFUP (type: Boolean, default: false)
 #    panl.mlt.handler - The handler path for the Solr MLT request handler
-#        (type: String, default: /mlt)
+#        (type: String, default: /select)
+#    panl.mlt.type - The type of the handler the Solr MLT request handler, must
+#        be one of 'select' or 'mlt' (without the quotes)
+#        (type: String, default: select)
 #    panl.mlt.fl - The fields to reference for the MLT lookup (type: comma
 #        separated Strings, default: N/A)
 #
-#                             ~ ~ ~ IMPORTANT ~ ~ ~
+#                            ~ ~ ~ IMPORTANT ~ ~ ~
 #
 #   - If you have not enabled the MLT functionality in Solr, then this will
 #     not work in the Panl server
@@ -251,7 +291,11 @@ panl.collection.extra=
 #                                ~ ~ ~ * ~ ~ ~
 
 panl.mlt.enable=false
-panl.mlt.handler=/mlt
+panl.mlt.handler=/select
+panl.mlt.type=select
+# the following property is only used if the panl.mlt.type property above is
+# set to 'mlt'
+panl.mlt.numretries=6
 
 #                           'More Like This' (MLT) Overrides
 #                           ----- ---- ----- ----- ---------
@@ -320,18 +364,18 @@ panl.mlt.handler=/mlt
 #     this query
 #                                ~ ~ ~ * ~ ~ ~
 panl.mlt.fl=
-panl.mlt.mintf=
-panl.mlt.mindf=
+panl.mlt.mintf=0
+panl.mlt.mindf=0
 panl.mlt.maxdf=
 panl.mlt.maxdfpct=
-panl.mlt.minwl=
+panl.mlt.minwl=0
 panl.mlt.maxwl=
 panl.mlt.maxqt=
 panl.mlt.maxntp=
 panl.mlt.boost=
 panl.mlt.qf=
-panl.mlt.interestingTerms=
-panl.mlt.match.include=
+panl.mlt.interestingTerms=none
+panl.mlt.match.include=false
 panl.mlt.match.offset=
 
 
