Changed generator to output the Solr field name, rather than using the LPSE code, integrated it into tests.

--- a/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
+++ b/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
@@ -1123,26 +1123,26 @@ panl.multivalue.t=true
 #                                ~ ~ ~ * ~ ~ ~
 
 panl.lpse.order=z,\
-i,\
-b,\
-N,\
-m,\
-B,\
-g,\
-G,\
-c,\
-C,\
-l,\
-r,\
-d,\
-w,\
-R,\
-L,\
-D,\
-h,\
-I,\
-v,\
-t,\
+id,\
+brand,\
+name,\
+mechanism_type,\
+body_shape,\
+grip_type,\
+grip_shape,\
+cap_shape,\
+category,\
+length,\
+relative_length,\
+diameter,\
+weight,\
+relative_weight,\
+lead_length,\
+disassemble,\
+hardness_indicator,\
+in_built_eraser,\
+variants,\
+text,\
 q,\
 p,\
 n,\
