--- a/build.gradle
+++ b/build.gradle
@@ -179,12 +179,12 @@ tasks.register('copyLoggingFile') {
 
 tasks.register('dockerWindows', Exec) {
 	commandLine "cmd.exe", "/C", "build-docker", "solr-panl-" + properties.getProperty("panl.solr.version") + "-" + properties.getProperty("panl.version")
-	dependsOn tasks.distZip
+	dependsOn tasks.distTar
 }
 
 tasks.register('dockerLinux', Exec) {
-	commandLine "build-docker.sh", "solr-panl-" + properties.getProperty("panl.solr.version") + "-" + properties.getProperty("panl.version")
-	dependsOn tasks.distZip
+	commandLine "./build-docker.sh", "solr-panl-" + properties.getProperty("panl.solr.version") + "-" + properties.getProperty("panl.version")
+	dependsOn tasks.distTar
 }
 
 tasks.withType(Copy).configureEach {
