--- a/src/test/resources/sample/simple-date/simple-date.panl.properties
+++ b/src/test/resources/sample/simple-date/simple-date.panl.properties
@@ -647,6 +647,7 @@ solr.highlight=false
 panl.field.i=id
 panl.name.i=Id
 panl.type.i=solr.StrField
+panl.uniquekey.i=true
 
 # <field "indexed"="true" "stored"="true" "name"="solr_date" "type"="pdate" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
@@ -931,15 +932,15 @@ o
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.lpse.facetorder=i,\
-S,\
-t,\
-y,\
-d,\
-m,\
-D,\
-w,\
-T
+panl.lpse.facetorder=id,\
+solr_date,\
+text_date,\
+year,\
+decade,\
+month,\
+day,\
+week_day,\
+text
 
 
 #                       Panl LPSE Ignore Configuration
