Fixed docker tag for *NIX, added in gradle task for window/*NIX testing and docker building

--- a/build.gradle
+++ b/build.gradle
@@ -191,6 +191,16 @@ tasks.withType(Copy).configureEach {
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
+import org.apache.tools.ant.taskdefs.condition.Os
+
+tasks.register('docker') {
+	if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+		dependsOn('dockerWindows')
+	} else {
+		dependsOn('dockerLinux')
+	}
+}
+
 test {
 	useJUnitPlatform()
 	finalizedBy jacocoTestReport
