--- a/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
+++ b/src/test/resources/sample/mechanical-pencils/mechanical-pencils.panl.properties
@@ -641,15 +641,15 @@ solr.highlight=false
 #
 #                                ~ ~ ~ * ~ ~ ~
 
-panl.lpse.fields=
-# <field "stored"="true" "name"="id" "type"="string" "multiValued"="false" "required"="true" />
+
+# <field "name"="id" "type"="string" "stored"="true" "required"="true" "multiValued"="false" />
 # This configuration can __ONLY__ ever be a field as it is not indexed in Solr
 panl.field.i=id
 panl.name.i=Id
 panl.type.i=solr.StrField
 panl.uniquekey.i=true
 
-# <field "indexed"="true" "stored"="true" "name"="brand" "type"="string" "multiValued"="false" />
+# <field "name"="brand" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.b=brand
 panl.name.b=Brand
@@ -669,7 +669,7 @@ panl.type.b=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.b=
 
-# <field "indexed"="true" "stored"="true" "name"="name" "type"="string" "multiValued"="false" />
+# <field "name"="name" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.N=name
 panl.name.N=Name
@@ -689,7 +689,7 @@ panl.type.N=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.N=
 
-# <field "indexed"="true" "stored"="true" "name"="mechanism_type" "type"="string" "multiValued"="false" />
+# <field "name"="mechanism_type" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.m=mechanism_type
 panl.name.m=Mechanism Type
@@ -709,7 +709,7 @@ panl.type.m=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.m=
 
-# <field "indexed"="true" "stored"="true" "name"="body_shape" "type"="string" "multiValued"="false" />
+# <field "name"="body_shape" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.B=body_shape
 panl.name.B=Body Shape
@@ -729,7 +729,7 @@ panl.type.B=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.B=
 
-# <field "indexed"="true" "stored"="true" "name"="grip_type" "type"="string" "multiValued"="false" />
+# <field "name"="grip_type" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.g=grip_type
 panl.name.g=Grip Type
@@ -749,7 +749,7 @@ panl.type.g=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.g=
 
-# <field "indexed"="true" "stored"="true" "name"="grip_shape" "type"="string" "multiValued"="false" />
+# <field "name"="grip_shape" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.G=grip_shape
 panl.name.G=Grip Shape
@@ -769,7 +769,7 @@ panl.type.G=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.G=
 
-# <field "indexed"="true" "stored"="true" "name"="cap_shape" "type"="string" "multiValued"="false" />
+# <field "name"="cap_shape" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.c=cap_shape
 panl.name.c=Cap Shape
@@ -789,7 +789,7 @@ panl.type.c=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.c=
 
-# <field "indexed"="true" "stored"="true" "name"="category" "type"="string" "multiValued"="false" />
+# <field "name"="category" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.C=category
 panl.name.C=Category
@@ -809,7 +809,7 @@ panl.type.C=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.C=
 
-# <field "indexed"="true" "stored"="true" "name"="length" "type"="pint" "multiValued"="false" />
+# <field "name"="length" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.l=length
 panl.name.l=Length
@@ -842,7 +842,7 @@ panl.type.l=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.l=
 
-# <field "indexed"="true" "stored"="true" "name"="relative_length" "type"="pint" "multiValued"="false" />
+# <field "name"="relative_length" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.r=relative_length
 panl.name.r=Relative Length
@@ -875,7 +875,7 @@ panl.type.r=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.r=
 
-# <field "indexed"="true" "stored"="true" "name"="diameter" "type"="pint" "multiValued"="false" />
+# <field "name"="diameter" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.d=diameter
 panl.name.d=Diameter
@@ -908,7 +908,7 @@ panl.type.d=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.d=
 
-# <field "indexed"="true" "stored"="true" "name"="weight" "type"="pint" "multiValued"="false" />
+# <field "name"="weight" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.w=weight
 panl.name.w=Weight
@@ -941,7 +941,7 @@ panl.type.w=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.w=
 
-# <field "indexed"="true" "stored"="true" "name"="relative_weight" "type"="pint" "multiValued"="false" />
+# <field "name"="relative_weight" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.R=relative_weight
 panl.name.R=Relative Weight
@@ -974,7 +974,7 @@ panl.type.R=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.R=
 
-# <field "indexed"="true" "stored"="true" "name"="lead_length" "type"="pint" "multiValued"="false" />
+# <field "name"="lead_length" "type"="pint" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.L=lead_length
 panl.name.L=Lead Length
@@ -1007,7 +1007,7 @@ panl.type.L=solr.IntPointField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.L=
 
-# <field "indexed"="true" "stored"="true" "name"="disassemble" "type"="boolean" "multiValued"="false" />
+# <field "name"="disassemble" "type"="boolean" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.D=disassemble
 panl.name.D=Disassemble
@@ -1027,7 +1027,7 @@ panl.type.D=solr.BoolField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.D=
 
-# <field "indexed"="true" "stored"="true" "name"="hardness_indicator" "type"="string" "multiValued"="false" />
+# <field "name"="hardness_indicator" "type"="string" "indexed"="true" "stored"="true" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.h=hardness_indicator
 panl.name.h=Hardness Indicator
@@ -1047,7 +1047,7 @@ panl.type.h=solr.StrField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.h=
 
-# <field "indexed"="true" "stored"="false" "name"="in_built_eraser" "type"="boolean" "multiValued"="false" />
+# <field "name"="in_built_eraser" "type"="boolean" "indexed"="true" "stored"="false" "multiValued"="false" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.I=in_built_eraser
 panl.name.I=In Built Eraser
@@ -1067,13 +1067,13 @@ panl.type.I=solr.BoolField
 # passed through then add the LPSE code(s) in a comma separated list below
 #panl.when.I=
 
-# <field "stored"="true" "name"="variants" "type"="string" "multiValued"="true" />
+# <field "name"="variants" "type"="string" "stored"="true" "multiValued"="true" />
 # This configuration can __ONLY__ ever be a field as it is not indexed in Solr
 panl.field.v=variants
 panl.name.v=Variants
 panl.type.v=solr.StrField
 
-# <field "indexed"="true" "stored"="true" "name"="text" "type"="text_general" "multiValued"="true" />
+# <field "name"="text" "type"="text_general" "indexed"="true" "stored"="true" "multiValued"="true" />
 # This configuration can be either a field or a facet as it is indexed in Solr
 panl.facet.t=text
 panl.name.t=Text
