--- a/build.gradle
+++ b/build.gradle
@@ -181,6 +181,26 @@ tasks.register('copyLoggingFile') {
 	}
 }
 
+tasks.register('dockerWindows', Exec) {
+	commandLine "cmd.exe", "/C", "build-docker", "solr-panl-" + properties.getProperty("panl.solr.version") + "-" + properties.getProperty("panl.version")
+	dependsOn tasks.distTar
+}
+
+tasks.register('dockerLinux', Exec) {
+	commandLine "./build-docker.sh", "solr-panl-" + properties.getProperty("panl.solr.version") + "-" + properties.getProperty("panl.version")
+	dependsOn tasks.distTar
+}
+
+import org.apache.tools.ant.taskdefs.condition.Os
+
+tasks.register('docker') {
+	if (Os.isFamily(Os.FAMILY_WINDOWS)) {
+		dependsOn('dockerWindows')
+	} else {
+		dependsOn('dockerLinux')
+	}
+}
+
 tasks.withType(Copy).configureEach {
 	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
