fixed docker build and gradle build

--- a/build.gradle
+++ b/build.gradle
@@ -58,8 +58,8 @@ dependencies {
 	implementation 'org.apache.solr:solr-solrj:8.11.3'
 
 	// HTTP server
-	implementation 'org.eclipse.jetty.http2:http2-server:10.0.22'
-	implementation 'org.eclipse.jetty:jetty-servlet:10.0.22'
+//	implementation 'org.eclipse.jetty:jetty-http:9.4.53.v20231009'
+//	implementation 'org.eclipse.jetty:jetty-http:9.4.53.v20231009'
 
 	// logging
 	implementation 'org.slf4j:slf4j-api:2.0.13'
@@ -74,6 +74,7 @@ dependencies {
 	implementation 'net.harawata:appdirs:1.2.2'
 
 	// testing
+	testImplementation 'org.apache.solr:solr-solrj:8.11.3'
 	testImplementation platform('org.junit:junit-bom:5.9.1')
 	testImplementation 'org.junit.jupiter:junit-jupiter'
 	testImplementation 'org.mockito:mockito-core:5.14.2'
@@ -91,6 +92,7 @@ dependencies {
 	// integration testing
 	//
 	// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	testIntegrationImplementation 'org.apache.solr:solr-solrj:8.11.3'
 	testIntegrationImplementation platform('org.junit:junit-bom:5.9.1')
 	testIntegrationImplementation 'org.junit.jupiter:junit-jupiter'
 	testIntegrationImplementation 'org.mockito:mockito-core:5.12.0'
@@ -98,8 +100,8 @@ dependencies {
 	testIntegrationImplementation 'commons-io:commons-io:2.16.1'
 	testIntegrationImplementation 'org.json:json:20240303'
 	// HTTP server
-	testIntegrationImplementation 'org.eclipse.jetty.http2:http2-server:10.0.20'
-	testIntegrationImplementation 'org.eclipse.jetty:jetty-servlet:10.0.20'
+//	testIntegrationImplementation 'org.eclipse.jetty:jetty.http:9.4.53.v20231009'
+//	testIntegrationImplementation 'org.eclipse.jetty:jetty-client:9.4.53.v20231009'
 
 	// logging
 	testIntegrationImplementation 'org.slf4j:slf4j-api:2.0.13'
@@ -117,6 +119,7 @@ dependencies {
 	// Site Spidering
 	//
 	// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	testIntegrationSpiderImplementation 'org.apache.solr:solr-solrj:8.11.3'
 	testIntegrationSpiderImplementation platform('org.junit:junit-bom:5.9.1')
 	testIntegrationSpiderImplementation 'org.junit.jupiter:junit-jupiter'
 	testIntegrationSpiderImplementation 'org.mockito:mockito-core:5.12.0'
@@ -125,8 +128,8 @@ dependencies {
 	testIntegrationSpiderImplementation 'org.json:json:20240303'
 
 	// HTTP server
-	testIntegrationSpiderImplementation 'org.eclipse.jetty.http2:http2-server:10.0.22'
-	testIntegrationSpiderImplementation 'org.eclipse.jetty:jetty-servlet:10.0.22'
+//	testIntegrationSpiderImplementation 'org.eclipse.jetty.http:9.4.53.v20231009'
+//	testIntegrationSpiderImplementation 'org.eclipse.jetty:jetty-servlet:9.4.53.v20231009'
 
 	// logging
 	testIntegrationSpiderImplementation 'org.slf4j:slf4j-api:2.0.13'
@@ -164,12 +167,16 @@ distributions {
 					"net.bytebuddy:byte-buddy-agent:1.15.4",
 					"org.objenesis:objenesis:3.3",
 					"commons-codec:commons-codec:1.17.1",
-					"org.eclipse.jetty.http2:http2-common:10.0.22",
-					"org.eclipse.jetty.http2:http2-hpack:10.0.22",
-					"org.eclipse.jetty:jetty-http:10.0.22",
-					"org.eclipse.jetty:jetty-io:10.0.22",
-					"org.eclipse.jetty:jetty-util:10.0.22"
-
+					'org.eclipse.jetty:jetty-alpn-client:9.4.53.v20231009',
+					'org.eclipse.jetty:jetty-alpn-java-client:9.4.53.v20231009',
+					'org.eclipse.jetty:jetty-client:9.4.53.v20231009',
+					'org.eclipse.jetty:jetty-http:9.4.53.v20231009',
+					'org.eclipse.jetty:jetty-io:9.4.53.v20231009',
+					'org.eclipse.jetty:jetty-util:9.4.53.v20231009',
+					'org.eclipse.jetty.http2:http2-client:9.4.53.v20231009',
+					'org.eclipse.jetty.http2:http2-common:9.4.53.v20231009',
+					'org.eclipse.jetty.http2:http2-hpack:9.4.53.v20231009',
+					'org.eclipse.jetty.http2:http2-http-client-transport:9.4.53.v20231009'
 		}
 	}
 }
