--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -30,15 +30,15 @@ RUN mkdir /archives/
 # ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
 #   Download the Solr server and the Panl server from the local disk
 # ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-ADD https://www.apache.org/dyn/closer.lua/solr/solr/9.9.0/solr-9.9.0-slim.tgz?action=download /archives/solr-9.9.0-slim.tgz
+ADD https://archive.apache.org/dist/lucene/solr/7.7.3/solr-7.7.3.tgz /archives/solr-7.7.3.tgz
 ADD build/distributions/${TAG}.tar /java-servers/
 
 
 # ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
 #   Extract the Solr server (The Panl server is automatically extracted by the
-#    ADD command above
+#    ADD command above)
 # ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
-RUN tar -xzvf /archives/solr-9.9.0-slim.tgz -C /java-servers/
+RUN tar -xzvf /archives/solr-7.7.3.tgz -C /java-servers/
 
 # ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
 #   1. Set up the linking for the Solr and Panl installation
@@ -48,7 +48,7 @@ RUN tar -xzvf /archives/solr-9.9.0-slim.tgz -C /java-servers/
 # ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
 WORKDIR /java-servers/
 
-RUN ln -s solr-9.9.0-slim solr
+RUN ln -s solr-7.7.3 solr
 RUN ln -s ${TAG} panl
 
 RUN mkdir /java-servers/solr/mechanical-pencils/
