--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,6 @@ dependencies {
 	// solrj
 	implementation 'org.apache.solr:solr-solrj:7.7.3'
 
-	// HTTP server
-	implementation 'org.eclipse.jetty.http2:http2-server:10.0.22'
-	implementation 'org.eclipse.jetty:jetty-servlet:10.0.22'
-
 	// logging
 	implementation 'org.slf4j:slf4j-api:2.0.13'
 	implementation 'org.apache.logging.log4j:log4j-core:2.23.1'
@@ -74,6 +70,7 @@ dependencies {
 	implementation 'net.harawata:appdirs:1.2.2'
 
 	// testing
+	testImplementation 'org.apache.solr:solr-solrj:7.7.3'
 	testImplementation platform('org.junit:junit-bom:5.9.1')
 	testImplementation 'org.junit.jupiter:junit-jupiter'
 	testImplementation 'org.mockito:mockito-core:5.14.2'
@@ -91,15 +88,13 @@ dependencies {
 	// integration testing
 	//
 	// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	testIntegrationImplementation 'org.apache.solr:solr-solrj:7.7.3'
 	testIntegrationImplementation platform('org.junit:junit-bom:5.9.1')
 	testIntegrationImplementation 'org.junit.jupiter:junit-jupiter'
 	testIntegrationImplementation 'org.mockito:mockito-core:5.12.0'
 	testIntegrationImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
 	testIntegrationImplementation 'commons-io:commons-io:2.16.1'
 	testIntegrationImplementation 'org.json:json:20240303'
-	// HTTP server
-	testIntegrationImplementation 'org.eclipse.jetty.http2:http2-server:10.0.20'
-	testIntegrationImplementation 'org.eclipse.jetty:jetty-servlet:10.0.20'
 
 	// logging
 	testIntegrationImplementation 'org.slf4j:slf4j-api:2.0.13'
@@ -117,16 +112,13 @@ dependencies {
 	// Site Spidering
 	//
 	// - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+	testIntegrationSpiderImplementation 'org.apache.solr:solr-solrj:7.7.3'
 	testIntegrationSpiderImplementation platform('org.junit:junit-bom:5.9.1')
 	testIntegrationSpiderImplementation 'org.junit.jupiter:junit-jupiter'
 	testIntegrationSpiderImplementation 'org.mockito:mockito-core:5.12.0'
 	testIntegrationSpiderImplementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'
 	testIntegrationSpiderImplementation 'commons-io:commons-io:2.16.1'
 	testIntegrationSpiderImplementation 'org.json:json:20240303'
-
-	// HTTP server
-	testIntegrationSpiderImplementation 'org.eclipse.jetty.http2:http2-server:10.0.22'
-	testIntegrationSpiderImplementation 'org.eclipse.jetty:jetty-servlet:10.0.22'
 
 	// logging
 	testIntegrationSpiderImplementation 'org.slf4j:slf4j-api:2.0.13'
@@ -186,10 +178,6 @@ tasks.register('dockerLinux', Exec) {
 	dependsOn tasks.distTar
 }
 
-tasks.withType(Copy).configureEach {
-	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
-}
-
 import org.apache.tools.ant.taskdefs.condition.Os
 
 tasks.register('docker') {
@@ -198,6 +186,9 @@ tasks.register('docker') {
 	} else {
 		dependsOn('dockerLinux')
 	}
+}
+tasks.withType(Copy).configureEach {
+	duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
 test {
