updated Dockerfile to index all inbuilt solr collections

--- a/src/docker/Dockerfile
+++ b/src/docker/Dockerfile
@@ -53,13 +53,20 @@ RUN ln -s ${TAG} panl
 
 RUN mkdir /java-servers/solr/mechanical-pencils/
 RUN mkdir /java-servers/solr/server/solr/mechanical-pencils/
-RUN cp -R /java-servers/panl/sample/solr/mechanical-pencils/* /java-servers/solr/server/solr/mechanical-pencils/
+
+RUN mkdir /java-servers/solr/simple-date/
+RUN mkdir /java-servers/solr/server/solr/simple-date/
+
+RUN mkdir /java-servers/solr/book-store/
+RUN mkdir /java-servers/solr/server/solr/book-store/
+
+RUN cp -R /java-servers/panl/sample/solr/* /java-servers/solr/server/solr/
 
 WORKDIR /
 COPY src/docker/solr.in.sh /java-servers/solr/bin/
 RUN chmod a+x /java-servers/solr/bin/solr.in.sh
 
-COPY src/docker/panl.properties /java-servers/panl/sample/panl/mechanical-pencils/panl.properties
+COPY src/docker/panl.properties /java-servers/panl/
 
 # ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~ ~
 #   Copy over the indexer shell script and execute it - this will:
